tests/ui/derives/derives-span-Debug-struct.stderr
error[E0277]: `&Error` doesn't implement `Debug`
  --> $DIR/derives-span-Debug-struct.rs:8:5
   |
LL | #[derive(Debug)]
   |          ----- in this derive macro expansion
LL | struct Struct {
LL |     x: Error
   |     ^^^^^^^^ `&Error` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `&Error`, which is required by `&Error: Debug`
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
